neltharion/apps/forgejo/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
  namespace: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      port: 80
      targetPort: 3000
