neltharion/apps/forgejo/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: ssh
      port: 22
      targetPort: 22
