neltharion/apps/forgejo/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: forgejo.wittnerlab.com
    external-dns.alpha.kubernetes.io/target: 5.135.136.115
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`forgejo.wittnerlab.com`)
      kind: Rule
      services:
        - name: forgejo-http
          port: 80
  tls:
    secretName: forgejo-tls
